fix: images no longer break on tablet screen.
Images properly align with header + footer and no
longer creating unneccesary space.

--- a/src/styles.css
+++ b/src/styles.css
@@ -319,11 +319,27 @@ footer>img {
 @media (min-width: 600px) and (max-width:1200px) {
 
   :root {
-    --header-image-size: 350px;
+    --header-image-size: 300px;
+  }
+
+  header {
+    padding-bottom: 0px;
+  }
+
+  .image-container {
+    position: absolute;
+    left: 50%;
+    top: 32px;
+    transform: translate(-50%,0)
+  }
+
+  .introduction {
+    margin-top: calc(var(--header-image-size) - 64px);
   }
 
   h1.name {
     font-size: 4rem;
+    display: none;
   }
 
   h3.project-header, h5.contact-header, .introduction>h2 {
@@ -331,19 +347,34 @@ footer>img {
   }
   
   p, p.contact-desc, p.contact-address {
-    font-size: 0.9rem;
+    font-size: 0.85rem;
   }
   
+  h4.project-title {
+    font-size: 1.25rem;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis
+  }
+
   .introduction>h2 {
     text-align: center;
   }
 
   .about-links {
       display: none;
-    }
+  }
 
   .project-section {
       grid-template-columns: repeat(2, 1fr);
+      grid-auto-rows: 550px;
   }
+
+  footer {
+    align-items: center;
+    gap: 32px;
+  }
+
+
 
 }
